ADD_SUBDIRECTORY(testDebugDrawManager)
ADD_SUBDIRECTORY(testEntity)
ADD_SUBDIRECTORY(testWheels)
ADD_SUBDIRECTORY(testEntitySystemPlugin)

FIND_PACKAGE(ProtoBuf)
FIND_PACKAGE(ENet)

IF(ENET_FOUND AND PROTOBUF_FOUND)
  ADD_SUBDIRECTORY(testENetServer)
  ADD_SUBDIRECTORY(testENetClient)
  ADD_SUBDIRECTORY(testENetServerSimple)
  ADD_SUBDIRECTORY(testENetClientSimple)
ENDIF(ENET_FOUND AND PROTOBUF_FOUND)
