CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

PROJECT(dtEntity)

IF (WIN32)
SET(CMAKE_DEBUG_POSTFIX  "d")
ENDIF (WIN32)

#to allow usage of hash_map:
IF(UNIX)
    ADD_DEFINITIONS(-Wno-deprecated)
ENDIF(UNIX)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules;${CMAKE_SOURCE_DIR}/source/osgLibRocket/cmake;${CMAKE_MODULE_PATH}")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

OPTION(BUILD_WITH_DELTA3D "Build with Delta3D" OFF)
OPTION(BUILD_TESTS "Build unit tests" OFF)
OPTION(BUILD_JAVASCRIPT_WRAPPERS "Build wrappers for dtScript" OFF)
OPTION(BUILD_PHYSX "Build physx component" OFF)
OPTION(BUILD_QT "Build Qt widgets" OFF)
OPTION(BUILD_LIBROCKET "Build LibRocket bindings" OFF)
OPTION(BUILD_XERCES "Build Xerces map encoder" OFF)
OPTION(BUILD_EXAMPLES "Build examples" OFF)

IF (BUILD_WITH_DELTA3D)
  FIND_PACKAGE(Delta3D REQUIRED)
ENDIF (BUILD_WITH_DELTA3D)

OPTION(BUILD_CEGUI_WRAPPER "Build CEGUI module" OFF)

SET(USE_OSG_ANIMATION 1)
SET(USE_OSG_DB        1)
SET(USE_OSG_GA        1)
SET(USE_OSG_PARTICLE  1)
SET(USE_OSG_SHADOW    1)
SET(USE_OSG_SIM       1)
SET(USE_OSG_TEXT      1)
SET(USE_OSG_TERRAIN   0)
SET(USE_OSG_UTIL      1)
SET(USE_OSG_VIEWER    1)
FIND_PACKAGE(OpenSceneGraph REQUIRED)


IF (BUILD_WITH_DELTA3D)
	LINK_DIRECTORIES( ${DELTA3D_LIB_DIR} )
	IF (DELTA3D_EXT_DIR)
	  LINK_DIRECTORIES( ${DELTA3D_EXT_DIR}/lib )
	ENDIF (DELTA3D_EXT_DIR)
ENDIF (BUILD_WITH_DELTA3D)

ADD_SUBDIRECTORY(source/dtEntity)
ADD_SUBDIRECTORY(source/dtEntitySimulation)

IF(BUILD_LIBROCKET)
	ADD_SUBDIRECTORY(source/osgLibRocket)
	ADD_SUBDIRECTORY(source/dtEntityRocket)
ENDIF(BUILD_LIBROCKET)

IF(BUILD_TESTS)
  ADD_SUBDIRECTORY(source/dtEntityUnitTests)
  ADD_SUBDIRECTORY(ext/UnitTest++)
ENDIF(BUILD_TESTS)

IF(BUILD_JAVASCRIPT_WRAPPERS)
  ADD_SUBDIRECTORY(source/dtEntityWrappers)
  ADD_SUBDIRECTORY(source/dtEntityScript)
ENDIF(BUILD_JAVASCRIPT_WRAPPERS)

IF(BUILD_PHYSX)
	ADD_SUBDIRECTORY(source/dtEntityPhysX)		
ENDIF(BUILD_PHYSX)

IF(BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples/testDebugDrawManager)
  ADD_SUBDIRECTORY(examples/testEntity)
  ADD_SUBDIRECTORY(examples/testWheels)
  ADD_SUBDIRECTORY(examples/testEntitySystemPlugin)

  IF(BUILD_PHYSX)
	ADD_SUBDIRECTORY(examples/testPhysX)
  ENDIF(BUILD_PHYSX)
ENDIF(BUILD_EXAMPLES)

IF(BUILD_QT)
   OPTION(BUILD_ENET_INTEGRATION "Build eNet integration" OFF)
   IF(BUILD_ENET_INTEGRATION)
	   ADD_SUBDIRECTORY(source/dtEntityENet)	
	   ADD_SUBDIRECTORY(examples/testNet)	
   ENDIF(BUILD_ENET_INTEGRATION)
   ADD_SUBDIRECTORY(source/dtEntityQtWidgets)
   ADD_SUBDIRECTORY(source/dtEntityEditor)	  
ENDIF(BUILD_QT)

